Vault.copy() defensive queries, extract gitFlags parsing, close relocate credential-bypass gap
- Add Vault.copy() and use it in VaultService's query methods
  (findAll/findById/findByRepoSlug/findAllByName) — same protection already
  applied to WorkspaceEntry (NomadSync-WSP-005): live cache references are
  never handed out, mutating a returned copy has no effect on the source of
  truth until submitted via update()
- Fix findAll() in both VaultService and WorkspaceService: .toList() returns
  an immutable list regardless of what it contains — callers expecting to
  mutate the returned list got UnsupportedOperationException. Switched to
  Collectors.toList()
- Extract VaultCli.extractGitFlags(flags) — the same three-line git.* filter
  was duplicated across create/add/update/relocate
- Fix handleVaultRelocate: the credential-only rejection only fired when no
  structural change was requested — owner/name/path change combined with
  --git.* silently applied the credential change too, bypassing the
  "use vault update for credentials" rule. Rejection is now unconditional:
  any --git.* flag on relocate is rejected regardless of what else changed
- Remove the --vault branch from Main.handleConfig — fully redundant with
  VaultCli.handleVaultUpdate, predates VaultCli's existence. handleConfig is
  now scoped to global config.properties updates only; simplified signature
  (flags, configFile, properties, logService)